Implemented entities, and initial DbContext setup

--- a/CRM.Infrastructure/CRM.Infrastructure.csproj
+++ b/CRM.Infrastructure/CRM.Infrastructure.csproj
@@ -19,4 +19,8 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CRM.Domain\CRM.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
