--- a/CRM.Application/CRM.Application.csproj
+++ b/CRM.Application/CRM.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\CommandHandlers\" />
+    <Folder Include="Queries\QueryHandlers\" />
+  </ItemGroup>
+
 </Project>
