--- a/CRM.Domain/CRM.Domain.csproj
+++ b/CRM.Domain/CRM.Domain.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Aggregates\" />
+    <Folder Include="ValueObjects\" />
+  </ItemGroup>
+
 </Project>
